# str2col

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/superpowers/plans/: 2026-07-16-str2col.md
docs/superpowers/specs/: 2026-07-16-str2col-design.md
str2col/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
