[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "str2col"
version = "0.1.0"
description = "Deterministically map any value to a color"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
str2col = "str2col.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
