[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "str2col"
version = "0.1.0"
description = "Map any value to a deterministic color"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
license = { text = "MIT" }
keywords = ["color", "hash", "terminal", "ansi", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/roncofaber/str2col"

[project.scripts]
str2col = "str2col.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
